	of the operation item in the CSM (N85191).
	(make_global_package_list): Create the CSM specifying a
	insensitive text and connecting the "tap_and_hold" signal when
	needed, that is, when creating the "uninstall apps" view (N85191).
	(start_entertaining_user): Force a size_request for the main label
	in order to get the line wrapping working properly (N85387).

2008-05-15  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src/main.cc (make_install_applications_view) : Use the Help topic
	"packagesview" instead of "sectionsview" for the "Browse installable apps."
	view that displays the list of sections (N85521).

2008-04-29  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/log.cc (save_log): Unescape the Gnome VFS uri before storing
	it in the global variable last_save_log_dir (N80933).

	* src/log.cc (cat_edit_response): Automatically remove or add a
	trailing "/" to the 'dist' field depending on the 'components'
	field, which could be empty or not.

	* utils/maemo-select-menu-location-main.c (dialog_exposed):
	Restore the gdk_window_raise statement, which was removed by
	mistake with revision 1109 (N84021).

2008-04-28  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.10

	* src/hildon-application-manager-config.cc (read_conf): Do not
	abort when a file can not be read.  Just reset the corresponding
	configuration.

2008-04-24  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (search_packages_reply): Call sort_all_packages so
	that the search results are sorted as well (N83776).

2008-04-23  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc (make_global_package_list) : Code cleanup.
	(package_selected_toggled_callback) : Deleted two lines that
	caused warnings.

	* package_info_cell_renderer.c
	(package_info_cell_renderer_set_property) : Use g_strstrip() on
	the 'description' string. Use g_object_ref instead of duplicating
	the pixbuf.
	(package_info_cell_renderer_get_size) : Entries without a